--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   intl: ^0.20.2
   flutter_compass: ^0.8.1
   weather_icons: ^3.0.0
+  fl_chart: ^0.70.2
+  geolocator: ^13.0.4
+  latlong2: ^0.9.1
+  flutter_map: ^8.1.1
+  shared_preferences: ^2.5.3
+
 
 dev_dependencies:
   flutter_test:
