feat: add background step service; update weather & stats screens with pull-to-refresh and scroll

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,12 @@ dependencies:
   syncfusion_flutter_gauges: ^29.1.37
   flutter_typeahead: ^5.0.0
 
+  pedometer: ^4.1.1     
+  sqflite: ^2.2.5+3      
+  path_provider: ^2.0.15
+  flutter_background_service: ^2.4.0
+  flutter_background_service_android: ^2.4.0
+
 
 dev_dependencies:
   flutter_test:
